clusters/common/apps/default/debug/tailsclale-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: goldpinger-ottawa
  annotations:
    tailscale.com/tailnet-fqdn: goldpinger-ottawa.keiretsu.ts.net
    # tailscale.com/proxy-group: common-egress-proxy
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName 
  ports:
  - name: http # any value
    port: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: goldpinger-robbinsdale
  annotations:
    tailscale.com/tailnet-fqdn: goldpinger-robbinsdale.keiretsu.ts.net
    # tailscale.com/proxy-group: common-egress-proxy
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName 
  ports:
  - name: http # any value
    port: 8080
    protocol: TCP 
---
apiVersion: v1
kind: Service
metadata:
  name: testqweqw
  annotations:
    tailscale.com/tailnet-ip: fd7a:115c:a1e0:b1a:0:1:a45:6032
    # tailscale.com/proxy-group: common-egress-proxy
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName 
  ports:
  - name: http # any value
    port: 8080
    protocol: TCP
