clusters/common/apps/default/debug/goldpinger.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: goldpinger
  namespace: default
  labels:
    app: goldpinger
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: goldpinger
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
      labels:
        app: goldpinger
    spec:
      serviceAccount: goldpinger-serviceaccount
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: goldpinger
          image: "docker.io/bloomberg/goldpinger:3.10.2"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            limits:
              memory: 80Mi
            requests:
              cpu: 1m
              memory: 40Mi
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: goldpinger
  namespace: default
  labels:
    app: goldpinger
    # tailscale.com/proxy-class: "common"
  annotations:
    tailscale.com/hostname: "goldpinger-${LOCATION}"
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: http
  selector:
    app: goldpinger
  loadBalancerClass: tailscale
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldpinger
  namespace: default
  annotations:
    item.homer.rajsingh.info/name: "Goldpinger"
    item.homer.rajsingh.info/subtitle: "Network Connectivity"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/svg/meshping.svg"
    item.homer.rajsingh.info/tag: "infrastructure"
    item.homer.rajsingh.info/keywords: "network, connectivity, debug"

    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local-ts
      namespace: keiretsu
  hostnames:
    - "goldpinger.${LOCATION}.${RAJSINGH_INFO_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: goldpinger
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
